# physics-engine

./: .gitignore  LICENSE  README.md  pyproject.toml
physics_engine/: README.md  __init__.py  cli.py  data_loader.py  logging_config.py  main.py  sklearn_adapter.py
physics_engine/active_inference/: __init__.py  belief_state.py  experiment_selector.py  free_energy.py  metadata_logging.py
physics_engine/api/: schemas.py  server.py
physics_engine/applications/: iskay_data_loader.py  pir_ksz.py
physics_engine/benchmarking/: __init__.py  cache_manager.py  diagnostics.py  experiment_config.py  experiment_hash.py  experiment_runner.py  metrics.py  result_aggregator.py  result_logger.py  summary_generator.py
physics_engine/benchmarks/: __init__.py  double_pendulum.py  franka_mass.py  gravity.py  harmonic_oscillator.py  kepler.py  newton.py  orbit_differential.py  orbit_trajectory.py  pendulum.py  pir_bench.py  robotics.py  robotics_trajectory.py
physics_engine/constraints/: __init__.py  dimensions.py  units.py
physics_engine/core/: __init__.py  control_engine.py  dataset.py  dependency.py  inference.py  model.py
physics_engine/data/: __init__.py  orbit.csv  pendulum.csv  robot_joint.csv  spring_mass.csv
physics_engine/discovery/: __init__.py  candidate_generator.py  decomposition.py  dimensional_registry_fix.py  dynamical_system.py  feature_library.py  feature_library_robotics.py  grammar_extension.py  hamiltonian_discovery.py  lagrangian_discovery.py  model_fitting.py  parameter_estimation.py  power_law_search.py  residual_refinement.py  scoring.py  sparse_selection.py  structure_detection.py  structure_discovery.py  symbolic_search.py
physics_engine/evaluation/: __init__.py  discovery_confidence.py
physics_engine/experiment_tracking/: __init__.py  artifact_store.py  experiment_db.py  experiment_queue.py
physics_engine/interface/: __init__.py  physics_chat.py
physics_engine/knowledge/: __init__.py  electromagnetism.json  loader.py  mechanics.json  models.py  quantum.json  retrieval.py  thermodynamics.json
physics_engine/knowledge_graph/: __init__.py  graph_store.py  law_node.py  relation_types.py
physics_engine/laws/: __init__.py  mechanics.py  registry.py
physics_engine/pipelines/: __init__.py  robot_identification.py  robot_structure_discovery.py  system_identification.py
physics_engine/pir/: __init__.py  dimensional_analysis.py  representation.py  serialization.py  transformations.py  units.py  validation.py
physics_engine/plugins/: __init__.py  load_plugins.py  plugin_base.py  plugin_registry.py  template_plugin.py
physics_engine/plugins/robotics/: __init__.py  robot_joint_plugin.py
physics_engine/reasoning/: __init__.py  conservation_detector.py  explanation.py  hamiltonian_validation.py  hypothesis_generation.py  lagrangian_validation.py  law_validation.py  symmetry_validation.py
physics_engine/refinement/: __init__.py  missing_term_detection.py  residual_analysis.py
physics_engine/regimes/: __init__.py  regime_detection.py
physics_engine/runner/: __init__.py  confidence.py  dynamical_system_runner.py  experiment_registry.py  experiment_runner.py  feynman_loader.py  report_generator.py
physics_engine/scientist/: __init__.py  experiment_designer.py  hypothesis_generator.py  scientist_loop.py  theory_manager.py
physics_engine/simulation/: __init__.py  integrators.py
physics_engine/symmetry/: __init__.py  conservation_finder.py  symmetry_detector.py
physics_engine/utils/: __init__.py  data_loader.py  derivatives.py  generate_datasets.py  generate_kepler_data.py  latent_features.py  latent_variables.py  physics_features.py  plot_kepler.py  plotting.py
physics_engine/validation/: __init__.py  conservation.py  dimensional_analysis.py  stability.py
physics_engine/variational/: __init__.py  euler_lagrange.py  lagrangian_discovery.py  lagrangian_library.py  multibody_lagrangian_discovery.py  multibody_library.py
